--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,3 +9,32 @@
   display:flex;
   flex-wrap: nowrap;
 }
+
+table {
+  width: 100%;
+  height: 100%;
+  border-collapse: collapse;
+}
+td {
+  width: 6.25%;
+  border: 3px solid #222;
+  border-top-color: transparent;
+}
+td::after {
+  content: '';
+  display: block;
+  margin-top: 100%;
+}
+td:first-of-type {
+  border-left-color: transparent;
+  border-top-color: transparent;
+}
+td:last-of-type {
+  border-right-color: transparent;
+  border-top-color: transparent;
+}
+tr:last-of-type td {
+  border-bottom-color: transparent;
+}
+
+
