--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -48,7 +48,7 @@ nav.header {
     background-color: #000b4f;
     color:white;
 }
-nav input {
+nav button {
     font-family: 'Open Sans', sans-serif;
     border: none;
     background-color: transparent;
