--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,10 @@
 table {
   width: 100%;
   height: 100%;
-  border-collapse: collapse;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
 }
 td {
   width: 6.25%;
