--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,13 +1,12 @@
 table {
-  width: 100%;
-  height: 100%;
-  top:0;
+  position: absolute;
+  top:13%;
   bottom:0;
   left:0;
   right:0;
+  overflow: hidden;
 }
 td {
-  width: 6.25%;
   border: .5px solid grey;
   border-top-color: transparent;
   background-color: transparent;
@@ -15,7 +14,7 @@ td {
 td::after {
   content: '';
   display: block;
-  margin-top: 100%;
+  margin-top: 70%;
 }
 td:first-of-type {
   border-left-color: transparent;
@@ -39,7 +38,6 @@ tr:last-of-type td {
 
 }
 
-
 @keyframes move{
 	0% {
 		width: 0;
@@ -49,10 +47,9 @@ tr:last-of-type td {
 	}
 }
 
-
 .gradient {
   width: 100%;
-  height: 90%;
+  height: 100%;
   position: fixed;
   top: 6%;
   left: 0;
