--- a/src/components/Visualize4.css
+++ b/src/components/Visualize4.css
@@ -1,5 +1,5 @@
 :root {
-	--size: 30%;
+	--size: 20%;
 	--speed: 5s;
 }
 
@@ -11,27 +11,27 @@
 	margin-top: 10%;
 }
 
-.circle {
+.viz4 {
 	width: var(--size);
 	height: var(--size);
 }
 
-.circle-inner {
+.viz4-inner {
 	position: absolute;
 	display: block;
 	width: var(--size);
 	height: var(--size);
-	border-radius: 50%;
+    border-radius: 40% 40% 40% 40% / 80% 80% 40% 40%;
 	box-shadow: 0 0 10px #228DFF, 0 0 20px #228DFF, 0 0 30px #228DFF, 0 0 40px #228DFF;
 	animation: rotate var(--speed) linear infinite;
 }
-.circle-inner:nth-child(2) {
+.viz4-inner:nth-child(2) {
 	box-shadow: 0 0 10px #ebfdad, 0 0 20px #ebfdad, 0 0 30px #ebfdad, 0 0 40px #ebfdad;
 	animation: rotate__other var(--speed) linear infinite;
 }
-.circle-inner:nth-child(3) {
+.viz4-inner:nth-child(3) {
 	box-shadow: 0 0 10px #fb34d5, 0 0 20px #fb34d5, 0 0 30px #fb34d5, 0 0 40px #fb34d5;
-	animation: rotate__other__other var(--speed) linear infinite;
+	animation: rotate__other var(--speed) linear infinite;
 }
 
 @keyframes rotate {
